[project]
name = "hvr-timestamp-refresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "pyhvr",
    "pyodbc>=5.3.0",
    "pytz>=2026.1.post1",
]

[tool.uv.sources]
pyhvr = { git = "https://github.com/kferenc3/pyhvr.git" }
